[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://sprites/bg.jpg" type="Texture" id=2]
[ext_resource path="res://sprites/brasao-uefs.png" type="Texture" id=3]
[ext_resource path="res://fontes/Candy_Pop!-demo-font.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 80
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
modulate/color = Color( 1, 1, 1, 1 )
draw_center = true

[node name="Lobby" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1027.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 515, 300 )
transform/scale = Vector2( 9.21466, 4.90183 )
texture = ExtResource( 2 )

[node name="brasao" type="Sprite" parent="."]

transform/pos = Vector2( 65, 530 )
transform/scale = Vector2( 0.35, 0.3 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 346.0
margin/top = 14.0
margin/right = 701.0
margin/bottom = 152.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dominó"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 332.0
margin/top = 95.0
margin/right = 727.0
margin/bottom = 233.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Químico"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelConnect" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 237.0
margin/top = 238.0
margin/right = 801.0
margin/bottom = 585.0

[node name="PanelCriarSala" type="Panel" parent="PanelConnect"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 79.0
margin/right = 274.0
margin/bottom = 291.0
custom_styles/panelf = SubResource( 2 )

[node name="Label" type="Label" parent="PanelConnect/PanelCriarSala"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 81.0
margin/top = 54.0
margin/right = 139.0
margin/bottom = 68.0
text = "Criar Sala"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="PanelConnect/PanelCriarSala"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 149.0
margin/top = -56.0
margin/right = 240.0
margin/bottom = -42.0
text = "Nome do jogador:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CriarSalaBtn" type="Button" parent="PanelConnect/PanelCriarSala"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 58.0
margin/top = 107.0
margin/right = 159.0
margin/bottom = 138.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Criar"
flat = false

[node name="HSeparator" type="HSeparator" parent="PanelConnect/PanelCriarSala"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -24.0
margin/top = -10.0
margin/right = 541.0
margin/bottom = 30.0

[node name="HSeparator2" type="HSeparator" parent="PanelConnect/PanelCriarSala"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -26.0
margin/top = 190.0
margin/right = 539.0
margin/bottom = 230.0

[node name="VSeparator" type="VSeparator" parent="PanelConnect/PanelCriarSala"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 236.0
margin/top = 10.0
margin/right = 276.0
margin/bottom = 209.0

[node name="NomeJogadorInput" type="TextEdit" parent="PanelConnect/PanelCriarSala"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 149.0
margin/top = -39.0
margin/right = 369.0
margin/bottom = -15.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="PanelEntrarSala" type="Panel" parent="PanelConnect"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 284.0
margin/top = 94.0
margin/right = 551.0
margin/bottom = 282.0

[node name="Label" type="Label" parent="PanelConnect/PanelEntrarSala"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 90.0
margin/top = 37.0
margin/right = 175.0
margin/bottom = 51.0
text = "Entrar na Sala"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="PanelConnect/PanelEntrarSala"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 33.0
margin/top = 73.0
margin/right = 98.0
margin/bottom = 87.0
text = "IP da sala:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EntrarSalaBtn" type="Button" parent="PanelConnect/PanelEntrarSala"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 87.0
margin/top = 135.0
margin/right = 194.0
margin/bottom = 167.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Entrar"
flat = false

[node name="IpSalaInput" type="TextEdit" parent="PanelConnect/PanelEntrarSala"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 92.0
margin/right = 252.0
margin/bottom = 116.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="statusLabel" type="Label" parent="PanelConnect"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 147.0
margin/top = 313.0
margin/right = 461.0
margin/bottom = 327.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="voltar_MainMenuBtn" type="Button" parent="PanelConnect"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 301.0
margin/right = 81.0
margin/bottom = 333.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "< Voltar"
flat = false

[node name="PanelEspera" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 338.0
margin/top = 225.0
margin/right = 719.0
margin/bottom = 572.0
__meta__ = { "_edit_group_":true }

[node name="ip_sala_label" type="Label" parent="PanelEspera"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 22.0
margin/right = 109.0
margin/bottom = 36.0
text = "IP da sala:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="PanelEspera"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 57.0
margin/right = 109.0
margin/bottom = 71.0
text = "Jogadores:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ListaJogadores" type="ItemList" parent="PanelEspera"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 42.0
margin/top = 79.0
margin/right = 344.0
margin/bottom = 289.0

[node name="iniciarBtn" type="Button" parent="PanelEspera"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 261.0
margin/top = 298.0
margin/right = 344.0
margin/bottom = 330.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Iniciar jogo"
flat = false

[node name="voltar_PanelConnectBtn" type="Button" parent="PanelEspera"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 44.0
margin/top = 299.0
margin/right = 113.0
margin/bottom = 331.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "< Voltar"
flat = false

[node name="erroBox" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 415.0
margin/top = 283.0
margin/right = 680.0
margin/bottom = 385.0
popup/exclusive = false
window/title = "Alert!"
dialog/hide_on_ok = true

[connection signal="pressed" from="PanelConnect/PanelCriarSala/CriarSalaBtn" to="." method="_on_CriarSalaBtn_pressed"]

[connection signal="pressed" from="PanelConnect/PanelEntrarSala/EntrarSalaBtn" to="." method="_on_EntrarSalaBtn_pressed"]

[connection signal="pressed" from="PanelConnect/voltar_MainMenuBtn" to="." method="_on_voltar_MainMenuBtn_pressed"]

[connection signal="pressed" from="PanelEspera/iniciarBtn" to="." method="_on_iniciarBtn_pressed"]

[connection signal="pressed" from="PanelEspera/voltar_PanelConnectBtn" to="." method="_on_voltar_PanelConnectBtn_pressed"]


